syntax = "proto3";

package orgplace.trafficquota.proto;

option go_package = "proto";

service TrafficQuotaService {
    rpc TakeToken (TakeTokenRequest) returns (TakeTokenResponse) {
    }
}

message TakeTokenRequest {
    string partition_key = 1;
    repeated string clustring_key = 2;
}

message TakeTokenResponse {
    repeated bool allowed = 1;
}
